# lmc

./: Cargo.toml  README.md
.github/workflows/: cross-build.yml  test.yml
src/: api.rs  config.rs  console.rs  highlight.rs  main.rs  writer.rs
