[package]
name = "lmc"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mirkonasato/lmc"

[dependencies]
anyhow = "1.0.93"
argh = "0.1.12"
eventsource-stream = "0.2.3"
futures-util = "0.3.31"
home = "0.5.9"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
rustyline = { version = "15.0.0", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tree-sitter-md = { version = "0.3.2", features = ["parser"] }

[dev-dependencies]
tempfile = "3.14.0"
